Connected the backend with the front end. Also, fixed layout alignment issues.

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -25,6 +25,31 @@ header {
 	text-align: center;
 }
 
+@media(min-width: 480px) {
+	header {
+		padding-top: 15px; 
+		padding-bottom: 15px; 
+	}
+		#zipForm {
+		padding-top: 0;
+		padding-bottom: 15px;
+	}
+}
+
+@media(min-width: 768px) {
+	header {
+		padding-bottom: 25px; 
+	}
+
+	#zipForm {
+		padding-top: 25px;
+		padding-bottom: 25px;
+	}
+}
+
+#footerSpacing{
+	padding: 25px;
+}
 
 footer {
 	text-align: center;
